libsolidity/parsing/Parser.cpp
/*
	This file is part of solidity.

	solidity is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or
	(at your option) any later version.

	solidity is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.

	You should have received a copy of the GNU General Public License
	along with solidity.  If not, see <http://www.gnu.org/licenses/>.
*/
/**
 * @author Christian <c@ethdev.com>
 * @date 2014
 * Solidity parser.
 */

#include <libsolidity/parsing/Parser.h>

#include <libsolidity/interface/Version.h>
#include <libyul/AsmParser.h>
#include <libyul/backends/evm/EVMDialect.h>
#include <liblangutil/ErrorReporter.h>
#include <liblangutil/Scanner.h>
#include <liblangutil/SemVerHandler.h>
#include <liblangutil/SourceLocation.h>
#include <libyul/backends/evm/EVMDialect.h>
#include <cctype>
#include <vector>

using namespace std;
using namespace langutil;

namespace dev
{
	namespace solidity
	{

		/// AST node factory that also tracks the begin and end position of an AST node
		/// while it is being parsed
		class Parser::ASTNodeFactory
		{
		public:
			explicit ASTNodeFactory(Parser const &_parser) : m_parser(_parser), m_location{_parser.position(), -1, _parser.source()} {}
			ASTNodeFactory(Parser const &_parser, ASTPointer<ASTNode> const &_childNode) : m_parser(_parser), m_location{_childNode->location()} {}

			void markEndPosition() { m_location.end = m_parser.endPosition(); }
			void setLocation(SourceLocation const &_location) { m_location = _location; }
			void setLocationEmpty() { m_location.end = m_location.start; }
			/// Set the end position to the one of the given node.
			void setEndPositionFromNode(ASTPointer<ASTNode> const &_node) { m_location.end = _node->location().end; }

			template <class NodeType, typename... Args>
			ASTPointer<NodeType> createNode(Args &&... _args)
			{
				solAssert(m_location.source, "");
				if (m_location.end < 0)
					markEndPosition();
				return make_shared<NodeType>(m_location, std::forward<Args>(_args)...);
			}

			SourceLocation const &location() const noexcept { return m_location; }

		private:
			Parser const &m_parser;
			SourceLocation m_location;
		};

		ASTPointer<SourceUnit> Parser::parse(shared_ptr<Scanner> const &_scanner)
		{
			try
			{
				m_recursionDepth = 0;
				m_scanner = _scanner;
				ASTNodeFactory nodeFactory(*this);
				vector<ASTPointer<ASTNode>> nodes;
				while (m_scanner->currentToken() != Token::EOS)
				{
					switch (m_scanner->currentToken())
					{
					case Token::Pragma:
						nodes.push_back(parsePragmaDirective());
						break;
					case Token::Import:
						nodes.push_back(parseImportDirective());
						break;
					case Token::Interface:
					case Token::Contract:
					case Token::Library:
						nodes.push_back(parseContractDefinition());
						break;
					default:
						fatalParserError(string("Expected pragma, import directive or contract/interface/library definition."));
					}
				}
				solAssert(m_recursionDepth == 0, "");
				return nodeFactory.createNode<SourceUnit>(nodes);
			}
			catch (FatalError const &)
			{
				if (m_errorReporter.errors().empty())
					throw; // Something is weird here, rather throw again.
				return nullptr;
			}
		}

		void Parser::parsePragmaVersion(SourceLocation const &_location, vector<Token> const &_tokens, vector<string> const &_literals)
		{
			SemVerMatchExpressionParser parser(_tokens, _literals);
			auto matchExpression = parser.parse();
			static SemVerVersion const currentVersion{string(VersionString)};
			// FIXME: only match for major version incompatibility
			if (!matchExpression.matches(currentVersion))
				m_errorReporter.fatalParserError(
					_location,
					"Source file requires different compiler version (current compiler is " +
						string(VersionString) + " - note that nightly builds are considered to be "
												"strictly less than the released version");
		}

		ASTPointer<PragmaDirective> Parser::parsePragmaDirective()
		{
			RecursionGuard recursionGuard(*this);
			// pragma anything* ;
			// Currently supported:
			// pragma solidity ^0.4.0 || ^0.3.0;
			ASTNodeFactory nodeFactory(*this);
			expectToken(Token::Pragma);
			vector<string> literals;
			vector<Token> tokens;
			do
			{
				Token token = m_scanner->currentToken();
				if (token == Token::Illegal)
					parserError("Token incompatible with Solidity parser as part of pragma directive.");
				else
				{
					string literal = m_scanner->currentLiteral();
					if (literal.empty() && TokenTraits::toString(token))
						literal = TokenTraits::toString(token);
					literals.push_back(literal);
					tokens.push_back(token);
				}
				m_scanner->next();
			} while (m_scanner->currentToken() != Token::Semicolon && m_scanner->currentToken() != Token::EOS);
			nodeFactory.markEndPosition();
			expectToken(Token::Semicolon);

			if (literals.size() >= 2 && literals[0] == "solidity")
			{
				parsePragmaVersion(
					nodeFactory.location(),
					vector<Token>(tokens.begin() + 1, tokens.end()),
					vector<string>(literals.begin() + 1, literals.end()));
			}

			return nodeFactory.createNode<PragmaDirective>(tokens, literals);
		}

		ASTPointer<ImportDirective> Parser::parseImportDirective()
		{
			RecursionGuard recursionGuard(*this);
			// import "abc" [as x];
			// import * as x from "abc";
			// import {a as b, c} from "abc";
			ASTNodeFactory nodeFactory(*this);
			expectToken(Token::Import);
			ASTPointer<ASTString> path;
			ASTPointer<ASTString> unitAlias = make_shared<string>();
			vector<pair<ASTPointer<Identifier>, ASTPointer<ASTString>>> symbolAliases;

			if (m_scanner->currentToken() == Token::StringLiteral)
			{
				path = getLiteralAndAdvance();
				if (m_scanner->currentToken() == Token::As)
				{
					m_scanner->next();
					unitAlias = expectIdentifierToken();
				}
			}
			else
			{
				if (m_scanner->currentToken() == Token::LBrace)
				{
					m_scanner->next();
					while (true)
					{
						ASTPointer<Identifier> id = parseIdentifier();
						ASTPointer<ASTString> alias;
						if (m_scanner->currentToken() == Token::As)
						{
							expectToken(Token::As);
							alias = expectIdentifierToken();
						}
						symbolAliases.emplace_back(move(id), move(alias));
						if (m_scanner->currentToken() != Token::Comma)
							break;
						m_scanner->next();
					}
					expectToken(Token::RBrace);
				}
				else if (m_scanner->currentToken() == Token::Mul)
				{
					m_scanner->next();
					expectToken(Token::As);
					unitAlias = expectIdentifierToken();
				}
				else
					fatalParserError("Expected string literal (path), \"*\" or alias list.");
				// "from" is not a keyword but parsed as an identifier because of backwards
				// compatibility and because it is a really common word.
				if (m_scanner->currentToken() != Token::Identifier || m_scanner->currentLiteral() != "from")
					fatalParserError("Expected \"from\".");
				m_scanner->next();
				if (m_scanner->currentToken() != Token::StringLiteral)
					fatalParserError("Expected import path.");
				path = getLiteralAndAdvance();
			}
			if (path->empty())
				fatalParserError("Import path cannot be empty.");
			nodeFactory.markEndPosition();
			expectToken(Token::Semicolon);
			return nodeFactory.createNode<ImportDirective>(path, unitAlias, move(symbolAliases));
		}

		ContractDefinition::ContractKind Parser::parseContractKind()
		{
			ContractDefinition::ContractKind kind;
			switch (m_scanner->currentToken())
			{
			case Token::Interface:
				kind = ContractDefinition::ContractKind::Interface;
				break;
			case Token::Contract:
				kind = ContractDefinition::ContractKind::Contract;
				break;
			case Token::Library:
				kind = ContractDefinition::ContractKind::Library;
				break;
			default:
				solAssert(false, "Invalid contract kind.");
			}
			m_scanner->next();
			return kind;
		}

		ASTPointer<ContractDefinition> Parser::parseContractDefinition()
		{
			RecursionGuard recursionGuard(*this);
			ASTNodeFactory nodeFactory(*this);
			ASTPointer<ASTString> name = nullptr;
			ASTPointer<ASTString> docString;
			vector<ASTPointer<InheritanceSpecifier>> baseContracts;
			vector<ASTPointer<ASTNode>> subNodes;
			ContractDefinition::ContractKind contractKind = ContractDefinition::ContractKind::Contract;
			try
			{
				if (m_scanner->currentCommentLiteral() != "")
					docString = make_shared<ASTString>(m_scanner->currentCommentLiteral());
				contractKind = parseContractKind();
				name = expectIdentifierToken();
				if (m_scanner->currentToken() == Token::Is)
					do
					{
						m_scanner->next();
						baseContracts.push_back(parseInheritanceSpecifier());
					} while (m_scanner->currentToken() == Token::Comma);
				expectToken(Token::LBrace);
				while (true)
				{
					Token currentTokenValue = m_scanner->currentToken();
					if (currentTokenValue == Token::RBrace)
						break;
					else if (currentTokenValue == Token::Function || currentTokenValue == Token::Constructor)
						// This can be a function or a state variable of function type (especially
						// complicated to distinguish fallback function from function type state variable)
						subNodes.push_back(parseFunctionDefinitionOrFunctionTypeStateVariable());
					else if (currentTokenValue == Token::Struct)
						subNodes.push_back(parseStructDefinition());
					else if (currentTokenValue == Token::Enum)
						subNodes.push_back(parseEnumDefinition());
					else if (
						currentTokenValue == Token::Identifier ||
						currentTokenValue == Token::Mapping ||
						TokenTraits::isElementaryTypeName(currentTokenValue))
					{
						VarDeclParserOptions options;
						options.isStateVariable = true;
						options.allowInitialValue = true;
						subNodes.push_back(parseVariableDeclaration(options));
						expectToken(Token::Semicolon);
					}
					else if (currentTokenValue == Token::Modifier)
						subNodes.push_back(parseModifierDefinition());
					else if (currentTokenValue == Token::Event)
						subNodes.push_back(parseEventDefinition());
					else if (currentTokenValue == Token::Using)
						subNodes.push_back(parseUsingDirective());
					else
						fatalParserError(string("Function, variable, struct or modifier declaration expected."));
				}
			}
			catch (FatalError const &)
			{
				if (
					!m_errorReporter.hasErrors() ||
					!m_parserErrorRecovery ||
					m_errorReporter.hasExcessiveErrors())
					BOOST_THROW_EXCEPTION(FatalError()); /* Don't try to recover here. */
				m_inParserRecovery = true;
			}
			nodeFactory.markEndPosition();
			if (m_inParserRecovery)
				expectTokenOrConsumeUntil(Token::RBrace, "ContractDefinition");
			else
				expectToken(Token::RBrace);
			return nodeFactory.createNode<ContractDefinition>(
				name,
				docString,
				baseContracts,
				subNodes,
				contractKind);
		}

		ASTPointer<InheritanceSpecifier> Parser::parseInheritanceSpecifier()
		{
			RecursionGuard recursionGuard(*this);
			ASTNodeFactory nodeFactory(*this);
			ASTPointer<UserDefinedTypeName> name(parseUserDefinedTypeName());
			unique_ptr<vector<ASTPointer<Expression>>> arguments;
			if (m_scanner->currentToken() == Token::LParen)
			{
				m_scanner->next();
				arguments.reset(new vector<ASTPointer<Expression>>(parseFunctionCallListArguments()));
				nodeFactory.markEndPosition();
				expectToken(Token::RParen);
			}
			else
				nodeFactory.setEndPositionFromNode(name);
			return nodeFactory.createNode<InheritanceSpecifier>(name, std::move(arguments));
		}

		Declaration::Visibility Parser::parseVisibilitySpecifier()
		{
			Declaration::Visibility visibility(Declaration::Visibility::Default);
			Token token = m_scanner->currentToken();
			switch (token)
			{
			case Token::Public:
				visibility = Declaration::Visibility::Public;
				break;
			case Token::Internal:
				visibility = Declaration::Visibility::Internal;
				break;
			case Token::Private:
				visibility = Declaration::Visibility::Private;
				break;
			case Token::External:
				visibility = Declaration::Visibility::External;
				break;
			default:
				solAssert(false, "Invalid visibility specifier.");
			}
			m_scanner->next();
			return visibility;
		}

		StateMutability Parser::parseStateMutability()
		{
			StateMutability stateMutability(StateMutability::NonPayable);
			Token token = m_scanner->currentToken();
			switch (token)
			{
			case Token::Payable:
				stateMutability = StateMutability::Payable;
				break;
			case Token::View:
				stateMutability = StateMutability::View;
				break;
			case Token::Pure:
				stateMutability = StateMutability::Pure;
				break;
			case Token::Constant:
				stateMutability = StateMutability::View;
				parserError(
					"The state mutability modifier \"constant\" was removed in version 0.5.0. "
					"Use \"view\" or \"pure\" instead.");
				break;
			default:
				solAssert(false, "Invalid state mutability specifier.");
			}
			m_scanner->next();
			return stateMutability;
		}

		Parser::FunctionHeaderParserResult Parser::parseFunctionHeader(bool _forceEmptyName, bool _allowModifiers)
		{
			RecursionGuard recursionGuard(*this);
			FunctionHeaderParserResult result;

			result.isConstructor = false;

			if (m_scanner->currentToken() == Token::Constructor)
				result.isConstructor = true;
			else if (m_scanner->currentToken() != Token::Function)
				solAssert(false, "Function or constructor expected.");
			m_scanner->next();

			if (result.isConstructor)
				result.name = make_shared<ASTString>();
			else if (_forceEmptyName || m_scanner->currentToken() == Token::LParen)
				result.name = make_shared<ASTString>();
			else if (m_scanner->currentToken() == Token::Constructor)
				fatalParserError(string(
					"This function is named \"constructor\" but is not the constructor of the contract. "
					"If you intend this to be a constructor, use \"constructor(...) { ... }\" without the \"function\" keyword to define it."));
			else
				result.name = expectIdentifierToken();

			VarDeclParserOptions options;
			options.allowLocationSpecifier = true;
			result.parameters = parseParameterList(options);
			while (true)
			{
				Token token = m_scanner->currentToken();
				if (_allowModifiers && token == Token::Identifier)
				{
					// If the name is empty (and this is not a constructor),
					// then this can either be a modifier (fallback function declaration)
					// or the name of the state variable (function type name plus variable).
					if ((result.name->empty() && !result.isConstructor) && (m_scanner->peekNextToken() == Token::Semicolon ||
																			m_scanner->peekNextToken() == Token::Assign))
						// Variable declaration, break here.
						break;
					else
						result.modifiers.push_back(parseModifierInvocation());
				}
				else if (TokenTraits::isVisibilitySpecifier(token))
				{
					if (result.visibility != Declaration::Visibility::Default)
					{
						// There is the special case of a public state variable of function type.
						// Detect this and return early.
						if (
							(result.visibility == Declaration::Visibility::External || result.visibility == Declaration::Visibility::Internal) &&
							result.modifiers.empty() &&
							(result.name->empty() && !result.isConstructor))
							break;
						parserError(string(
							"Visibility already specified as \"" +
							Declaration::visibilityToString(result.visibility) +
							"\"."));
						m_scanner->next();
					}
					else
						result.visibility = parseVisibilitySpecifier();
				}
				else if (TokenTraits::isStateMutabilitySpecifier(token))
				{
					if (result.stateMutability != StateMutability::NonPayable)
					{
						parserError(string(
							"State mutability already specified as \"" +
							stateMutabilityToString(result.stateMutability) +
							"\"."));
						m_scanner->next();
					}
					else
						result.stateMutability = parseStateMutability();
				}
				else
					break;
			}
			if (m_scanner->currentToken() == Token::Returns)
			{
				bool const permitEmptyParameterList = false;
				m_scanner->next();
				result.returnParameters = parseParameterList(options, permitEmptyParameterList);
			}
			else
				result.returnParameters = createEmptyParameterList();
			return result;
		}

		ASTPointer<ASTNode> Parser::parseFunctionDefinitionOrFunctionTypeStateVariable()
		{
			RecursionGuard recursionGuard(*this);
			ASTNodeFactory nodeFactory(*this);
			ASTPointer<ASTString> docstring;
			if (m_scanner->currentCommentLiteral() != "")
				docstring = make_shared<ASTString>(m_scanner->currentCommentLiteral());

			FunctionHeaderParserResult header = parseFunctionHeader(false, true);

			if (
				header.isConstructor ||
				!header.modifiers.empty() ||
				!header.name->empty() ||
				m_scanner->currentToken() == Token::Semicolon ||
				m_scanner->currentToken() == Token::LBrace)
			{
				// this has to be a function
				ASTPointer<Block> block = ASTPointer<Block>();
				nodeFactory.markEndPosition();
				if (m_scanner->currentToken() != Token::Semicolon)
				{
					block = parseBlock();
					nodeFactory.setEndPositionFromNode(block);
				}
				else
					m_scanner->next(); // just consume the ';'
				return nodeFactory.createNode<FunctionDefinition>(
					header.name,
					header.visibility,
					header.stateMutability,
					header.isConstructor,
					docstring,
					header.parameters,
					header.modifiers,
					header.returnParameters,
					block);
			}
			else
			{
				// this has to be a state variable
				ASTPointer<TypeName> type = nodeFactory.createNode<FunctionTypeName>(
					header.parameters,
					header.returnParameters,
					header.visibility,
					header.stateMutability);
				type = parseTypeNameSuffix(type, nodeFactory);
				VarDeclParserOptions options;
				options.isStateVariable = true;
				options.allowInitialValue = true;
				auto node = parseVariableDeclaration(options, type);
				expectToken(Token::Semicolon);
				return node;
			}
		}

		ASTPointer<StructDefinition> Parser::parseStructDefinition()
		{
			RecursionGuard recursionGuard(*this);
			ASTNodeFactory nodeFactory(*this);
			expectToken(Token::Struct);
			ASTPointer<ASTString> name = expectIdentifierToken();
			vector<ASTPointer<VariableDeclaration>> members;
			expectToken(Token::LBrace);
			while (m_scanner->currentToken() != Token::RBrace)
			{
				members.push_back(parseVariableDeclaration());
				expectToken(Token::Semicolon);
			}
			nodeFactory.markEndPosition();
			expectToken(Token::RBrace);
			return nodeFactory.createNode<StructDefinition>(name, members);
		}

		ASTPointer<EnumValue> Parser::parseEnumValue()
		{
			RecursionGuard recursionGuard(*this);
			ASTNodeFactory nodeFactory(*this);
			nodeFactory.markEndPosition();
			return nodeFactory.createNode<EnumValue>(expectIdentifierToken());
		}

		ASTPointer<EnumDefinition> Parser::parseEnumDefinition()
		{
			RecursionGuard recursionGuard(*this);
			ASTNodeFactory nodeFactory(*this);
			expectToken(Token::Enum);
			ASTPointer<ASTString> name = expectIdentifierToken();
			vector<ASTPointer<EnumValue>> members;
			expectToken(Token::LBrace);

			while (m_scanner->currentToken() != Token::RBrace)
			{
				members.push_back(parseEnumValue());
				if (m_scanner->currentToken() == Token::RBrace)
					break;
				expectToken(Token::Comma);
				if (m_scanner->currentToken() != Token::Identifier)
					fatalParserError(string("Expected identifier after ','"));
			}
			if (members.empty())
				parserError({"enum with no members is not allowed."});

			nodeFactory.markEndPosition();
			expectToken(Token::RBrace);
			return nodeFactory.createNode<EnumDefinition>(name, members);
		}

		ASTPointer<VariableDeclaration> Parser::parseVariableDeclaration(
			VarDeclParserOptions const &_options,
			ASTPointer<TypeName> const &_lookAheadArrayType)
		{
			RecursionGuard recursionGuard(*this);
			ASTNodeFactory nodeFactory = _lookAheadArrayType ? ASTNodeFactory(*this, _lookAheadArrayType) : ASTNodeFactory(*this);
			ASTPointer<TypeName> type;
			if (_lookAheadArrayType)
				type = _lookAheadArrayType;
			else
			{
				type = parseTypeName(_options.allowVar);
				if (type != nullptr)
					nodeFactory.setEndPositionFromNode(type);
			}
			bool isIndexed = false;
			bool isDeclaredConst = false;
			Declaration::Visibility visibility(Declaration::Visibility::Default);
			VariableDeclaration::Location location = VariableDeclaration::Location::Unspecified;
			ASTPointer<ASTString> identifier;

			while (true)
			{
				Token token = m_scanner->currentToken();
				if (_options.isStateVariable && TokenTraits::isVariableVisibilitySpecifier(token))
				{
					nodeFactory.markEndPosition();
					if (visibility != Declaration::Visibility::Default)
					{
						parserError(string(
							"Visibility already specified as \"" +
							Declaration::visibilityToString(visibility) +
							"\"."));
						m_scanner->next();
					}
					else
						visibility = parseVisibilitySpecifier();
				}
				else
				{
					if (_options.allowIndexed && token == Token::Indexed)
						isIndexed = true;
					else if (token == Token::Constant)
						isDeclaredConst = true;
					else if (_options.allowLocationSpecifier && TokenTraits::isLocationSpecifier(token))
					{
						if (location != VariableDeclaration::Location::Unspecified)
							parserError(string("Location already specified."));
						else if (!type)
							parserError(string("Location specifier needs explicit type name."));
						else
						{
							switch (token)
							{
							case Token::Storage:
								location = VariableDeclaration::Location::Storage;
								break;
							case Token::Memory:
								location = VariableDeclaration::Location::Memory;
								break;
							case Token::CallData:
								location = VariableDeclaration::Location::CallData;
								break;
							default:
								solAssert(false, "Unknown data location.");
							}
						}
					}
					else
						break;
					nodeFactory.markEndPosition();
					m_scanner->next();
				}
			}

			if (_options.allowEmptyName && m_scanner->currentToken() != Token::Identifier)
			{
				identifier = make_shared<ASTString>("");
				solAssert(!_options.allowVar, ""); // allowEmptyName && allowVar makes no sense
			}
			else
			{
				nodeFactory.markEndPosition();
				identifier = expectIdentifierToken();
			}
			ASTPointer<Expression> value;
			if (_options.allowInitialValue)
			{
				if (m_scanner->currentToken() == Token::Assign)
				{
					m_scanner->next();
					value = parseExpression();
					nodeFactory.setEndPositionFromNode(value);
				}
			}
			return nodeFactory.createNode<VariableDeclaration>(
				type,
				identifier,
				value,
				visibility,
				_options.isStateVariable,
				isIndexed,
				isDeclaredConst,
				location);
		}

		ASTPointer<ModifierDefinition> Parser::parseModifierDefinition()
		{
			RecursionGuard recursionGuard(*this);
			ScopeGuard resetModifierFlag([this]() { m_insideModifier = false; });
			m_insideModifier = true;

			ASTNodeFactory nodeFactory(*this);
			ASTPointer<ASTString> docstring;
			if (m_scanner->currentCommentLiteral() != "")
				docstring = make_shared<ASTString>(m_scanner->currentCommentLiteral());

			expectToken(Token::Modifier);
			ASTPointer<ASTString> name(expectIdentifierToken());
			ASTPointer<ParameterList> parameters;
			if (m_scanner->currentToken() == Token::LParen)
			{
				VarDeclParserOptions options;
				options.allowIndexed = true;
				options.allowLocationSpecifier = true;
				parameters = parseParameterList(options);
			}
			else
				parameters = createEmptyParameterList();
			ASTPointer<Block> block = parseBlock();
			nodeFactory.setEndPositionFromNode(block);
			return nodeFactory.createNode<ModifierDefinition>(name, docstring, parameters, block);
		}

		ASTPointer<EventDefinition> Parser::parseEventDefinition()
		{
			RecursionGuard recursionGuard(*this);
			ASTNodeFactory nodeFactory(*this);
			ASTPointer<ASTString> docstring;
			if (m_scanner->currentCommentLiteral() != "")
				docstring = make_shared<ASTString>(m_scanner->currentCommentLiteral());

			expectToken(Token::Event);
			ASTPointer<ASTString> name(expectIdentifierToken());

			VarDeclParserOptions options;
			options.allowIndexed = true;
			ASTPointer<ParameterList> parameters = parseParameterList(options);
